--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -42,8 +42,8 @@
         <div class="right">
 
             <section id="entry-controls">
-                <a class="entry-settings" href="#" data-toggle=".menu-right"><span class="hidden">Post Settings</span></a>
-                <ul class="entry-settings-menu menu-right overlay" style="display: none">
+                <a class="entry-settings" href="#" data-toggle=".entry-settings-menu"><span class="hidden">Post Settings</span></a>
+                <ul class="entry-settings-menu menu-right overlay">
                     <li class="post-setting">
                         <div class="post-setting-label">
                             <label for="url">URL</label>
@@ -57,10 +57,10 @@
                             <label for="url">Pub Date</label>
                         </div>
                         <div class="post-setting-field">
-                            <input class="post-setting-date" disabled type="text" value=""><!--<span class="post-setting-calendar"></span>-->
+                            <input class="post-setting-date" type="text" value=""><!--<span class="post-setting-calendar"></span>-->
                         </div>
                     </li>
-                    <li><a href="#" class="delete">Delete</a></li>
+                    <li><a href="#" class="delete hidden">Delete</a></li>
                 </ul>
             </section>
 
