--- a/core/client/assets/sass/layouts/editor.scss
+++ b/core/client/assets/sass/layouts/editor.scss
@@ -632,8 +632,25 @@ body.zen {
 
 .entry-settings-menu {
     position: absolute;
-    bottom: 40px;
-    right: -5px;
+    bottom: 45px;
+    right: -3px;
+
+    li {
+        a {
+            padding: 10px 15px;
+
+            &:before {
+                font-size: 11px;
+                line-height: 1em;
+            }
+        }
+    }
+
+    .delete {
+        @include icon($i-trash) { position: relative; top: -2px; };
+
+        &:hover { background: $red; }
+    }
 }
 
 #entry-actions {
