--- a/ghost/admin/assets/sass/modules/icons.scss
+++ b/ghost/admin/assets/sass/modules/icons.scss
@@ -145,7 +145,7 @@ $i-archive:         \e01f;
 $i-services:        \e020;
 $i-appearance:      \e021;
 $i-video:           \e022;
-$i-remove:          \e023;
+$i-trash:           \e023;
 $i-reply:           \e024;
 $i-stats:           \e025;
 $i-featured:        \e026;
