Complete Modal Refactor
* Smoother animations
* Removed blurring in Chrome temporarily
* Centering is now done in CSS (the height is calculated in JS to work in FF and Opera)
* Modals now need close: true to be set to enable the close icon and shortcuts for closing (ESC key, background clicking)

--- a/core/client/assets/sass/layouts/editor.scss
+++ b/core/client/assets/sass/layouts/editor.scss
@@ -667,7 +667,9 @@ body.zen {
 /* =============================================================================
    Markdown Help Modal
    ============================================================================= */
-
+.markdown-help-container{
+    padding-bottom: 20px;
+}
 .modal-markdown-help-table {
     margin-top: 0;
 }
