--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -33,8 +33,9 @@
             {{{body}}}
         </main>
 
-        <aside id="modal-container">
-        </aside>
+        <div id="modal-container">
+        </div>
+        <div class="modal-background fade"></div>
 
         {{{ghostScriptTags}}}
 
