--- a/ghost/admin/assets/sass/layouts/editor.scss
+++ b/ghost/admin/assets/sass/layouts/editor.scss
@@ -667,7 +667,9 @@ body.zen {
 /* =============================================================================
    Markdown Help Modal
    ============================================================================= */
-
+.markdown-help-container{
+    padding-bottom: 20px;
+}
 .modal-markdown-help-table {
     margin-top: 0;
 }
