Complete Modal Refactor
* Smoother animations
* Removed blurring in Chrome temporarily
* Centering is now done in CSS (the height is calculated in JS to work in FF and Opera)
* Modals now need close: true to be set to enable the close icon and shortcuts for closing (ESC key, background clicking)

--- a/core/client/assets/sass/modules/global.scss
+++ b/core/client/assets/sass/modules/global.scss
@@ -984,30 +984,40 @@ nav {
    Modals
    ========================================================================== */
 #modal-container {
-    &.active {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        z-index: 999;
-        @include transition(all 0.15s linear 0s);
-        @include transform(translateZ(0));
+    @include box-sizing(border-box);
+    display: none;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow-x: auto;
+    overflow-y: scroll;
+    z-index: 1040;
+    pointer-events: none;
+    @include transition(all 0.15s linear 0s);
+    @include transform(translateZ(0));
+}
 
-        &.dark {
-            background: rgba(0,0,0,0.4);
-        }
+.fade {
+    opacity: 0;
+    @include transition(opacity 0.2s linear 0s);
+    @include transform(translateZ(0));
 
-        .modal-background {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            z-index: 999;
-        }
-
+    &.in {
+        opacity: 1;
     }
+}
+
+.modal-background {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0,0,0,0.4);
+    z-index: 1030;
 }
 
 body.blur > *:not(#modal-container) {
@@ -1022,30 +1032,29 @@ body.blur > *:not(#modal-container) {
 
 %modal, .modal {
     @include box-sizing(border-box);
-    max-height: 90%;
+    left: 50%;
+    right: auto;
     width: 450px;
-    padding: 0;
-    background: #fff;
-    border-radius: $rounded;
-    overflow:auto;
-    z-index: 1001;
-    box-shadow: rgba(0,0,0,0.2) 0 0 0 6px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    z-index: 1050;
+    pointer-events: auto;
 
-    &.fade {
-        opacity: 0;
-        @include transition(opacity 0.2s linear 0s);
 
-        &.in {
-            opacity: 1;
-        }
-    }
+    @include breakpoint($tablet) {
+        width: auto;
+        padding: 10px;
+    };
 
     button {
         min-width: 100px;
     }
 
-    @include breakpoint($mobile) {
+    @include breakpoint($tablet) {
         width: 100%;
+        margin-left: 0;
     }
 }
 
@@ -1055,16 +1064,49 @@ body.blur > *:not(#modal-container) {
 
 .modal-action {
     @extend %modal;
+    padding: 60px 0 30px;
+
+    @include breakpoint($tablet) {
+        padding: 30px 0;
+    }
 
     .modal-footer {
         margin-top: 20px;
     }
 }
 
+.modal-content {
+    @include box-sizing(padding-box);
+    position: relative;
+    background-clip: padding-box;
+    background-color: #FFFFFF;
+    border-radius: $rounded;
+    box-shadow: rgba(0,0,0,0.2) 0 0 0 6px;
+
+    .close {
+        @include box-sizing(border-box);
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        width: 16px;
+        min-height: 16px;
+        padding: 0;
+        margin: 0;
+        border: none;
+        z-index: 9999;
+
+        @include icon($i-x, 1em, $midgrey);
+        @include transition(opacity 0.3s linear);
+
+        &:hover {
+            color: $darkgrey;
+        }
+    }
+}
 .modal-header {
     position: relative;
     padding: 20px;
-    border-bottom: 1px solid $lightgrey;
+    border-bottom: 1px solid $lightbrown;
 
     h1 {
         display: inline-block;
@@ -1072,31 +1114,13 @@ body.blur > *:not(#modal-container) {
         font-size: 1.5em;
         font-weight: bold;
     }
-
-    .close {
-        @include box-sizing(border-box);
-        position: absolute;
-        top: 10px;
-        right: 20px;
-        width: 16px;
-        min-height: 16px;
-        padding: 0;
-        margin: 0;
-        border: none;
-        opacity: 0.4;
-
-        @include icon($i-close, 1em, $midgrey);
-        @include transition(opacity 0.3s linear);
-
-        &:hover{
-           opacity: 1;
-        }
-    }
 }
 
-.modal-content {
-    padding: 0 20px;
+.modal-body {
+    position: relative;
     min-height: 100px;
+    padding: 0 20px;
+    overflow-y: auto;
 }
 
 .modal-footer {
@@ -1107,7 +1131,7 @@ body.blur > *:not(#modal-container) {
 .modal-style-wide {
     width: 550px;
 
-    @include breakpoint($mobile) {
+    @include breakpoint($tablet) {
         width: 100%;
     }
 }
@@ -1322,6 +1346,9 @@ main {
     }
 }
 
+.modal-content .pre-image-uploader, .modal-content .image-uploader {
+    margin: 20px 0 0 0;
+}
 .pre-image-uploader {
     @include box-sizing(border-box);
     @include baseline;
