--- a/core/client/assets/sass/modules/global.scss
+++ b/core/client/assets/sass/modules/global.scss
@@ -1356,15 +1356,19 @@ main {
     }
 
     .image-cancel {
-        @include icon($i-x, 16px);
+        @include icon($i-trash, 11px);
         position: absolute;
-        color: white;
-        text-shadow: rgba(0,0,0,0.3) 0 0 3px;
         top: 10px;
         right: 10px;
+        padding: 8px;
+        background: rgba(0,0,0,0.3);
+        border-radius: $rounded;
+        color: white;
         text-decoration: none;
+        line-height: 0;
 
         &:hover {
+            background: rgba(0,0,0,0.5);
             cursor: pointer;
             color: white;
         }
