--- a/core/client/tpl/settings/general.hbs
+++ b/core/client/tpl/settings/general.hbs
@@ -1,5 +1,5 @@
 <header>
-    <button class="button-back">Cancel</button>
+    <button class="button-back">Back</button>
     <h2 class="title">General</h2>
     <section class="page-actions">
         <button class="button-save">Save</button>
