Clearing out images we don't use

--- a/core/server/views/partials/navbar.hbs
+++ b/core/server/views/partials/navbar.hbs
@@ -9,7 +9,7 @@
 
             <li id="usermenu" class="subnav">
                 <a href="#" data-toggle="ul" class="dropdown">
-                    <img class="avatar" src="{{#if currentUser.profile}}{{currentUser.profile}}{{else}}/ghost/img/user.jpg{{/if}}" alt="Avatar" />
+                    <img class="avatar" src="{{#if currentUser.profile}}{{currentUser.profile}}{{else}}/shared/img/default-user-profile-picture.jpg{{/if}}" alt="Avatar" />
                     <span class="name">{{#if currentUser.name}}{{currentUser.name}}{{else}}Ghost{{/if}} v{{version}}</span>
                 </a>
                 <ul class="overlay">
