--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <script src="{{ site.url }}/assets/js/respond.min.js"></script>
 <![endif]-->
 
-<link rel="shortcut icon" href="{{ site.url }}/assets/img/favicon.png">
+<link rel="shortcut icon" href="{{ site.url }}/assets/img/favicon.ico">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
 </head>
