--- a/ghost/admin/assets/sass/layouts/editor.scss
+++ b/ghost/admin/assets/sass/layouts/editor.scss
@@ -625,7 +625,8 @@ body.zen {
     position: relative;
     top: 1px;
 
-    &:hover {
+    &:hover,
+    &.active {
         color: $lightgrey;
     }
 }
