Corrected settings menu bugs
Fixes #788

- Toggles now close all any other open toggles.
- Added .active class for post settings menu to ensure highlight stays
on settings icon/button until it is closed, not just on hover.

--- a/core/client/assets/sass/layouts/editor.scss
+++ b/core/client/assets/sass/layouts/editor.scss
@@ -625,7 +625,8 @@ body.zen {
     position: relative;
     top: 1px;
 
-    &:hover {
+    &:hover,
+    &.active {
         color: $lightgrey;
     }
 }
