--- a/ghost/admin/tpl/settings/general.hbs
+++ b/ghost/admin/tpl/settings/general.hbs
@@ -21,7 +21,7 @@
                 <textarea id="blog-description">{{description}}</textarea>
                 <p>Describe what your blog is about</p>
             </div>
-
+        </fieldset>
             <div class="form-group">
                 <label for="blog-logo">Blog Logo</label>
                 {{#if logo}}
@@ -41,7 +41,7 @@
                 {{/if}}
                 <p>Display a cover image on your site</p>
             </div>
-
+        <fieldset>
             <div class="form-group">
                 <label for="email-address">Email Address</label>
                 <input id="email-address" name="general[email-address]" type="email" value="{{email}}" autocapitalize="off" autocorrect="off" />
