Bug Fix: Clicking on Post Settings labels now selects relative input

--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -49,15 +49,15 @@
                             <label for="url">URL</label>
                         </div>
                         <div class="post-setting-field">
-                            <input class="post-setting-slug" type="text" value="" />
+                            <input id="url" class="post-setting-slug" type="text" value="" />
                         </div>
                     </li>
                     <li class="post-setting">
                         <div class="post-setting-label">
-                            <label for="url">Pub Date</label>
+                            <label for="pub-date">Pub Date</label>
                         </div>
                         <div class="post-setting-field">
-                            <input class="post-setting-date" type="text" value=""><!--<span class="post-setting-calendar"></span>-->
+                            <input id="pub-date" class="post-setting-date" type="text" value=""><!--<span class="post-setting-calendar"></span>-->
                         </div>
                     </li>
                     <li><a href="#" class="delete hidden">Delete This Post</a></li>
