Default user image and cover
closes #812

- replace defaults with consistently named .png files
- change the settings saving code so that it doesn't double-save images and save the defaults to the db

--- a/core/client/tpl/settings/user-profile.hbs
+++ b/core/client/tpl/settings/user-profile.hbs
@@ -9,7 +9,7 @@
 <section class="content no-padding">
 
     <header class="user-profile-header">
-        <img id="user-cover" class="cover-image" src="{{#if cover}}{{cover}}{{else}}/shared/img/cover.png{{/if}}" title="{{name}}'s Cover Image"/>
+        <img id="user-cover" class="cover-image" src="{{#if cover}}{{cover}}{{else}}/shared/img/user-cover.png{{/if}}" title="{{name}}'s Cover Image"/>
         <button class="edit-cover-image js-modal-cover">Change Cover</button>
     </header>
 
