--- a/core/client/assets/sass/layouts/users.scss
+++ b/core/client/assets/sass/layouts/users.scss
@@ -104,7 +104,7 @@
         .user-last-seen {
             line-height: 1em;
         }
-        
+
     }
 
     .user-role {
@@ -128,7 +128,7 @@
 
     .user-profile-header {
         position: relative;
-        
+
         // Gradient overlay
         &:after {
             content: "";
@@ -208,7 +208,7 @@
             display: block;
             width: 100%;
             height: 100%;
-            background-image: url(/shared/img/default-user-profile-picture.jpg);
+            background-image: url(/shared/img/user-image.png);
             background-size: cover;
             background-position: center center;
         }
@@ -236,7 +236,7 @@
     #user-name {
         border-color: #fff;
     }
-    
+
     .user-details-bottom {
         padding: 0 40px;
         margin: -30px 0 0 0;
