--- a/ghost/admin/assets/sass/layouts/users.scss
+++ b/ghost/admin/assets/sass/layouts/users.scss
@@ -201,7 +201,7 @@
         border-radius: 100%;
         overflow: hidden;
         border: 5px solid #fff;
-        background: $darkgrey;
+        background: #fff;
         z-index: 2;
 
         .img {
