Adding email docs & doing some basic updates

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,13 +38,10 @@
           <a href="{{ site.url }}/usage">Usage</a>
         </li>
         <li>
-          <a href="{{ site.url }}/customisation">Customisation</a>
+          <a href="{{ site.url }}/email">Email</a>
         </li>
         <li>
           <a href="{{ site.url }}/themes">Themes</a>
-        </li>
-        <li>
-          <a href="{{ site.url }}/plugins">Plugins</a>
         </li>
         <li>
           <a href="{{ site.url }}/help">Help</a>
