Updating mail instructions

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
           <a href="{{ site.url }}/usage">Usage</a>
         </li>
         <li>
-          <a href="{{ site.url }}/email">Email</a>
+          <a href="{{ site.url }}/mail">Email</a>
         </li>
         <li>
           <a href="{{ site.url }}/themes">Themes</a>
