--- a/core/server/views/partials/navbar.hbs
+++ b/core/server/views/partials/navbar.hbs
@@ -15,7 +15,7 @@
                 <ul class="overlay">
                     <li class="usermenu-profile"><a href="/ghost/settings/user/">Your Profile</a></li>
                     <li class="divider"></li>
-                    <li class="usermenu-help"><a href="http://forum.tryghost.org">Help / Support</a></li>
+                    <li class="usermenu-help"><a href="http://ghost.org/forum/">Help / Support</a></li>
                     <li class="divider"></li>
                     <li class="usermenu-signout"><a href="/signout/">Sign Out</a></li>
                 </ul>
