Stop Titles from being hidden on Hash links

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,13 @@ a:hover {
     color: #5ba4e5;
 }
 
+h1:before, h2:before {
+    display:block; 
+    content:""; 
+    height:70px; 
+    margin:-70px 0 0; 
+}
+
 /* ==========================================================================
    Navigation
    ========================================================================== */
