Increased visibility of trash can in image uploader for broken url
closes #838

- adds a min height value to pre-image-uploader scss

--- a/core/client/assets/sass/modules/global.scss
+++ b/core/client/assets/sass/modules/global.scss
@@ -1415,6 +1415,7 @@ main {
     color: $brown;
     background: rgba(0,0,0,0.1);
     border-radius: 2px;
+    min-height: 46px;
 
     input {
         position: absolute;
