--- a/ghost/admin/assets/sass/modules/global.scss
+++ b/ghost/admin/assets/sass/modules/global.scss
@@ -1415,6 +1415,7 @@ main {
     color: $brown;
     background: rgba(0,0,0,0.1);
     border-radius: 2px;
+    min-height: 46px;
 
     input {
         position: absolute;
