--- a/ghost/admin/assets/sass/modules/global.scss
+++ b/ghost/admin/assets/sass/modules/global.scss
@@ -1284,7 +1284,8 @@ main {
     .centre{
         position: relative;
         top: 50px;
-        margin-bottom: -6px;
+        display: block;
+        margin: 0 auto -6px auto;
     }
     .media {
         @include icon($i-image, 60px, darken($lightbrown, 3%)) {
