--- a/ghost/admin/tpl/modals/markdown.hbs
+++ b/ghost/admin/tpl/modals/markdown.hbs
@@ -84,6 +84,11 @@
                 <td>Ctrl + Alt + W</td>
             </tr>
             <tr>
+                <td>New Paragraph</td>
+                <td></td>
+                <td>Ctrl / Cmd + Enter</td>
+            </tr>
+            <tr>
                 <td>Uppercase</td>
                 <td></td>
                 <td>Ctrl + U</td>
