Added new paragraph keyboard shortcut
`Ctrl / Cmd + Enter` now enters a new paragraph, but only if the user is not on a new line.

--- a/core/client/tpl/modals/markdown.hbs
+++ b/core/client/tpl/modals/markdown.hbs
@@ -84,6 +84,11 @@
                 <td>Ctrl + Alt + W</td>
             </tr>
             <tr>
+                <td>New Paragraph</td>
+                <td></td>
+                <td>Ctrl / Cmd + Enter</td>
+            </tr>
+            <tr>
                 <td>Uppercase</td>
                 <td></td>
                 <td>Ctrl + U</td>
