--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -1,48 +1,49 @@
 <!doctype html>
 <!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
 <!--[if (gte IE 9)| IEMobile |!(IE)]><!--><html class="no-js" lang="en"><!--<![endif]-->
-    <head>
-        <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<head>
+    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-        <title>{{siteTitle}}</title>
-        <meta name="description" content="{{siteDescription}}">
-        <meta name="author" content="">
-        <meta name="HandheldFriendly" content="True">
-        <meta name="MobileOptimized" content="320">
-        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-        <meta name="apple-mobile-web-app-capable" content="yes" />
+    <title>{{siteTitle}} Admin</title>
 
-        <link rel="shortcut icon" href="/favicon.ico">
-        <meta http-equiv="cleartype" content="on">
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
 
-        <link rel="stylesheet" type='text/css' href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700'>
-        <link rel="stylesheet" href="/ghost/css/screen.css">
-        {{{block "pageStyles"}}}
-    </head>
-    <body class="{{bodyClass}}">
-        {{#unless hideNavbar}}
-            {{> navbar}}
-        {{/unless}}
+    <meta http-equiv="cleartype" content="on">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
 
-        <main role="main" id="main">
-            <aside id="notifications">
-                {{> notifications}}
-            </aside>
+    <link rel="shortcut icon" href="/favicon.ico">
 
-            {{{body}}}
-        </main>
+    <link rel="stylesheet" type='text/css' href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700'>
+    <link rel="stylesheet" href="/ghost/css/screen.css">
+    {{{block "pageStyles"}}}
+</head>
+<body class="{{bodyClass}}">
+    {{#unless hideNavbar}}
+        {{> navbar}}
+    {{/unless}}
 
-        <div id="modal-container">
-        </div>
-        <div class="modal-background fade"></div>
+    <main role="main" id="main">
+        <aside id="notifications">
+            {{> notifications}}
+        </aside>
 
-        {{{ghostScriptTags}}}
+        {{{body}}}
 
-        {{{block "bodyScripts"}}}
+    </main>
 
-        <script>
-            Ghost.init();
-        </script>
-    </body>
+    <div id="modal-container">
+    </div>
+    <div class="modal-background fade"></div>
+
+    {{{ghostScriptTags}}}
+
+    {{{block "bodyScripts"}}}
+
+    <script>
+        Ghost.init();
+    </script>
+</body>
 </html>
