Adding support for Apple, Android, and Microsoft app icons

--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -15,6 +15,16 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
     <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" href="/ghost/img/touch-icon-iphone.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="76x76" href="/ghost/img/touch-icon-ipad.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/ghost/img/small.png" />
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/ghost/img/medium.png" />
+
+    <meta name="application-name" content="Ghost"/>
+    <meta name="msapplication-TileColor" content="#ffffff"/>
+    <meta name="msapplication-square70x70logo" content="/ghost/img/small.png"/>
+    <meta name="msapplication-square150x150logo" content="/ghost/img/medium.png"/>
+    <meta name="msapplication-square310x310logo" content="/ghost/img/large.png"/>
 
     <link rel="stylesheet" type='text/css' href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700'>
     <link rel="stylesheet" href="/ghost/css/screen.css">
