--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <title>{{siteTitle}} Admin</title>
+    <title>Ghost Admin</title>
 
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
