Initial loading bar implementation
See #726

Becomes visible when <body> has a class of `js-loading`

--- a/core/client/assets/sass/modules/global.scss
+++ b/core/client/assets/sass/modules/global.scss
@@ -11,6 +11,7 @@
  * Mobile Navigation
  * Drop-down / Pop-up Menu
  * Notifications
+ * Loading Bar
  * Modals
  * Main Elements
  * Floating Headers
@@ -979,6 +980,160 @@ nav {
     @include icon($i-info);
     background: $blue;
 }
+
+
+/* ==========================================================================
+   Loading Bar
+   ========================================================================== */
+
+.js-loading .loading-bar {
+    display: block;
+    -webkit-animation:  shift-rightwards 1.5s ease-in-out infinite;
+    -moz-animation:     shift-rightwards 1.5s ease-in-out infinite;
+    -ms-animation:      shift-rightwards 1.5s ease-in-out infinite;
+    -o-animation:       shift-rightwards 1.5s ease-in-out infinite;
+    animation:          shift-rightwards 1.5s ease-in-out infinite;
+    -webkit-animation-delay:    0.4s;
+    -moz-animation-delay:       0.4s;
+    -o-animation-delay:         0.4s;
+    animation-delay:            0.4s;
+}
+
+.loading-bar {
+    position: fixed;
+    display: none;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 2px;
+    z-index: 900;
+    background: $blue;
+    -webkit-transform:  translateX(100%);
+    -moz-transform:     translateX(100%);
+    -o-transform:       translateX(100%);
+    transform:          translateX(100%);
+}
+
+@-webkit-keyframes shift-rightwards {
+    0% {
+        -webkit-transform:  translateX(-100%);
+        -moz-transform:     translateX(-100%);
+        -o-transform:       translateX(-100%);
+        transform:          translateX(-100%);
+    }
+
+    40% {
+        -webkit-transform:  translateX(0%);
+        -moz-transform:     translateX(0%);
+        -o-transform:       translateX(0%);
+        transform:          translateX(0%);
+    }
+
+    60% {
+        -webkit-transform:  translateX(0%);
+        -moz-transform:     translateX(0%);
+        -o-transform:       translateX(0%);
+        transform:          translateX(0%);
+    }
+
+    100% {
+        -webkit-transform:  translateX(100%);
+        -moz-transform:     translateX(100%);
+        -o-transform:       translateX(100%);
+        transform:          translateX(100%);
+    }
+
+}
+@-moz-keyframes shift-rightwards {
+    0% {
+        -webkit-transform:  translateX(-100%);
+        -moz-transform:     translateX(-100%);
+        -o-transform:       translateX(-100%);
+        transform:          translateX(-100%);
+    }
+
+    40% {
+        -webkit-transform:  translateX(0%);
+        -moz-transform:     translateX(0%);
+        -o-transform:       translateX(0%);
+        transform:          translateX(0%);
+    }
+
+    60% {
+        -webkit-transform:  translateX(0%);
+        -moz-transform:     translateX(0%);
+        -o-transform:       translateX(0%);
+        transform:          translateX(0%);
+    }
+
+    100% {
+        -webkit-transform:  translateX(100%);
+        -moz-transform:     translateX(100%);
+        -o-transform:       translateX(100%);
+        transform:          translateX(100%);
+    }
+
+}
+@-o-keyframes shift-rightwards {
+    0% {
+        -webkit-transform:  translateX(-100%);
+        -moz-transform:     translateX(-100%);
+        -o-transform:       translateX(-100%);
+        transform:          translateX(-100%);
+    }
+
+    40% {
+        -webkit-transform:  translateX(0%);
+        -moz-transform:     translateX(0%);
+        -o-transform:       translateX(0%);
+        transform:          translateX(0%);
+    }
+
+    60% {
+        -webkit-transform:  translateX(0%);
+        -moz-transform:     translateX(0%);
+        -o-transform:       translateX(0%);
+        transform:          translateX(0%);
+    }
+
+    100% {
+        -webkit-transform:  translateX(100%);
+        -moz-transform:     translateX(100%);
+        -o-transform:       translateX(100%);
+        transform:          translateX(100%);
+    }
+
+}
+@keyframes shift-rightwards {
+    0% {
+        -webkit-transform:  translateX(-100%);
+        -moz-transform:     translateX(-100%);
+        -o-transform:       translateX(-100%);
+        transform:          translateX(-100%);
+    }
+
+    40% {
+        -webkit-transform:  translateX(0%);
+        -moz-transform:     translateX(0%);
+        -o-transform:       translateX(0%);
+        transform:          translateX(0%);
+    }
+
+    60% {
+        -webkit-transform:  translateX(0%);
+        -moz-transform:     translateX(0%);
+        -o-transform:       translateX(0%);
+        transform:          translateX(0%);
+    }
+
+    100% {
+        -webkit-transform:  translateX(100%);
+        -moz-transform:     translateX(100%);
+        -o-transform:       translateX(100%);
+        transform:          translateX(100%);
+    }
+}
+
 
 /* ==========================================================================
    Modals
