--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -31,6 +31,8 @@
     {{{block "pageStyles"}}}
 </head>
 <body class="{{bodyClass}}">
+    <div class="loading-bar"></div>
+    
     {{#unless hideNavbar}}
         {{> navbar}}
     {{/unless}}
