Fix pressing enter key on user settings
Specified type='button' for the buttons in the form so they don't get
pseudo clicked on enter key in inputs.  Added a keyup handler to check
for enter keys in the inputs and do the proper action based on where you
are in the form.

--- a/core/client/tpl/settings/user-profile.hbs
+++ b/core/client/tpl/settings/user-profile.hbs
@@ -19,7 +19,7 @@
 
             <figure class="user-image">
                 <a id="user-image" class="img" {{#if image}}style="background-image: url({{image}});"{{/if}} href="#"><span class="hidden">{{name}}'s Picture</span></a>
-                <button class="edit-user-image js-modal-image">Edit Picture</button>
+                <button type="button" class="edit-user-image js-modal-image">Edit Picture</button>
             </figure>
 
             <div class="form-group">
@@ -78,7 +78,7 @@
                 <input type="password" id="user-new-password-verification" />
             </div>
             <div class="form-group">
-                <button class="button-delete button-change-password">Change Password</button>
+                <button type="button" class="button-delete button-change-password">Change Password</button>
             </div>
 
         </fieldset>
