--- a/core/server/views/editor.hbs
+++ b/core/server/views/editor.hbs
@@ -14,7 +14,7 @@
             Markdown
             <a class="markdown-help" href="#"><span class="hidden">What is Markdown?</span></a>
         </header>
-        <section class="entry-markdown-content">
+        <section id="entry-markdown-content" class="entry-markdown-content" data-filestorage={{fileStorage}}>
             <textarea id="entry-markdown"></textarea>
         </section>
     </section>{{!.entry-markdown}}
