Move webfonts to // rather than http://
https://en.ghost.org/forum/bugs-suggestions/475-suggestion-remove-system-dependence-on-google-web-fonts

--- a/core/server/views/default.hbs
+++ b/core/server/views/default.hbs
@@ -26,7 +26,7 @@
     <meta name="msapplication-square150x150logo" content="/ghost/img/medium.png"/>
     <meta name="msapplication-square310x310logo" content="/ghost/img/large.png"/>
 
-    <link rel="stylesheet" type='text/css' href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700'>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:400,300,700">
     <link rel="stylesheet" href="/ghost/css/screen.css">
     {{{block "pageStyles"}}}
 </head>
