Cleanup and new sidebar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -98,7 +98,7 @@ translations:
           </a>
         </li>
         <li>
-          <a href="{{ site.url }}/{% if page.lang %}{{page.lang}}/{% endif %}help/">
+          <a href="http://ghost.org/forum/">
             {% if page.lang %}
               {{page.translations.[page.lang].help}}
             {% else %}
