--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -197,6 +197,9 @@ span.note {
     background: #8ba644
 }
 
+.install-ghost .btn {
+    margin: 1em .5em 2em;
+}
 
 
 /* ==========================================================================
