Refactored usage docs. More to come.

--- a/_includes/subnav/usage.html
+++ b/_includes/subnav/usage.html
@@ -1,5 +1,5 @@
-{% assign chapter = "installation" %}
-{% assign items = "mac windows linux deploy upgrading troubleshooting" | split: ' ' %}
+{% assign chapter = "usage" %}
+{% assign items = "configuration settings writing" | split: ' ' %}
 
 {% if page.lang %}
     {% assign base_url = site.url | append: '/' | append: page.lang | append: '/' | append: chapter | append: '/' %}
