--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,7 @@ body {
     padding-top: 60px;
     font-family: 'Open Sans', Lato, sans-serif;
     font-size: 16px;
+    line-height: 1.6em;
     background: #edece4;
 }
 
